fix: spacing on responsive nav

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@
 
 body {
   background-image: url('../assets/images/background.jpeg');
-  background-size: 200vh;
+  background-size: cover;
 }
 
 #logo {
@@ -26,6 +26,13 @@ body {
 
 #sensorial-about {
   display: inline;
+}
+
+@media (max-width: 991px) {
+  .nav {
+    flex-direction: column;
+    justify-content: space-between !important;
+  }
 }
 
 
@@ -69,42 +76,42 @@ body {
 }
 
 #sidebar-wrapper {
-min-height: 100vh;
-margin-left: -15rem;
--webkit-transition: margin .25s ease-out;
--moz-transition: margin .25s ease-out;
--o-transition: margin .25s ease-out;
-transition: margin .25s ease-out;
+  min-height: 100vh;
+  margin-left: -15rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
 }
 
 #sidebar-wrapper .sidebar-heading {
-padding: 0.875rem 1.25rem;
-font-size: 1.2rem;
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
 }
 
 #sidebar-wrapper .list-group {
-width: 15rem;
+  width: 15rem;
 }
 
 #page-content-wrapper {
-min-width: 100vw;
+  min-width: 100vw;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-margin-left: 0;
-}
-
-@media (min-width: 768px) {
-#sidebar-wrapper {
   margin-left: 0;
 }
 
-#page-content-wrapper {
-  min-width: 0;
-  width: 100%;
-}
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
 
-#wrapper.toggled #sidebar-wrapper {
-  margin-left: -15rem;
-}
+  #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    margin-left: -15rem;
+  }
 }
